--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Guillaume Prouchandy</h1>
-      <p>Je suis <span class="typed" data-typed-items="Developpeur, Gameur, Autodidacte, Sportif"></span></p>
+      <p>Je suis <span class="typed" data-typed-items="Développeur, Gameur, Autodidacte, Sportif"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -185,7 +185,7 @@
             <h3 class="resume-title">Sommaire</h3>
             <div class="resume-item pb-0">
               <h4>Guillaume Prouchandy</h4>
-              <p><em>Jeune déveleppeur ayant changé d'orientation fin 2022, à la recherche de nouveaux challenges</em></p>
+              <p><em>Jeune développeur ayant changé d'orientation fin 2022, à la recherche de nouveaux challenges</em></p>
               <ul>
                 <li>Allfortville, Val-de-Marne, 94140</li>
                 <li>06.07.94.72.30</li>
