ajout exp pro armée

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -231,6 +231,17 @@
                 <li>Intervention en salle de visio-conférence</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Armée de terre - Militaire de rang</h4>
+              <h5>2016 - 2020</h5>
+              <p><em>Castres</em></p>
+              <ul>
+                <li>Protection de base</li>
+                <li>Surveillance</li>
+                <li>Pratique du sport quotidienne</li>
+                <li>OPEX</li>
+              </ul>
+            </div>
           </div>
         </div>
 
